// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing bonus creators should create a destiny bonus 1`] = `
Object {
  "type": "BONUS_DESTINY",
  "value": 10,
}
`;

exports[`Testing bonus creators should create a skill speciality bonus 1`] = `
Object {
  "skill": "Awareness",
  "speciality": "Hear",
  "type": "BONUS_SPECIALITY",
}
`;

exports[`Testing bonus creators should create a skill with a not in data speciality bonus 1`] = `
Object {
  "skill": "Awareness",
  "speciality": "Totally not in data speciality",
  "type": "BONUS_SPECIALITY",
}
`;

exports[`Testing bonus creators should create an chi bonus 1`] = `
Object {
  "chi": "fire",
  "type": "BONUS_CHI",
  "value": 10,
}
`;

exports[`Testing bonus creators should create an cultivation bonus 1`] = `
Object {
  "chi": "fire",
  "type": "BONUS_CULTIVATION",
  "value": 10,
}
`;

exports[`Testing bonus creators should create an entanglement bonus 1`] = `
Object {
  "type": "BONUS_ENTANGLEMENT",
  "value": 10,
}
`;

exports[`Testing bonus creators should create an oneAmongN bonus 1`] = `
Object {
  "bonuses": Array [
    Object {
      "type": "BONUS_ENTANGLEMENT",
      "value": 10,
    },
    Object {
      "type": "BONUS_DESTINY",
      "value": 10,
    },
  ],
  "type": "BONUS_ONE_AMONG_N",
}
`;

exports[`Testing bonus creators should create an skill rank bonus 1`] = `
Object {
  "skill": "Awareness",
  "type": "BONUS_SKILL_RANK",
}
`;

exports[`Testing bonus creators should not create an oneAmongN bonus with only one bonus but give the bonus back 1`] = `
Object {
  "type": "BONUS_DESTINY",
  "value": 10,
}
`;
